Configured address rows for user prof

--- a/Unify/PostalAddressCell.xib
+++ b/Unify/PostalAddressCell.xib
@@ -68,6 +68,7 @@
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="home" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CxV-9u-oLc">
                         <rect key="frame" x="5" y="48.5" width="59" height="24"/>
+                        <accessibility key="accessibilityConfiguration" identifier="typeLabel" label="addressTypeLabel"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
